--- a/myCraftyGame.html
+++ b/myCraftyGame.html
@@ -63,8 +63,9 @@
                     //setup animations
                     this.requires("SpriteAnimation, Collision")
                 .animate("walk_left", 560, 0, 560)
-                .animate("walk_right", 560, 0, 560)
+                .animate("walk_right", [[222,76]])
                 .animate("jump", 0, 0, 0)
+		.animate("still", 218, 1, 218)
                     //change direction when a direction change event is received
                 .bind("NewDirection",
                     function (direction) {
@@ -74,6 +75,7 @@
                         }
                         if (direction.x > 0) {
                             if (!this.isPlaying("walk_right"))
+				this.attr({ w: 45, h: 74});
                                 this.stop().animate("walk_right", 10, -1);
                         }
                         if (direction.y < 0) {
@@ -85,7 +87,8 @@
                                 this.stop().animate("walk_right", 10, -1);
                         }
                         if (!direction.x && !direction.y) {
-                            this.stop();
+			    this.attr({ w: 32, h: 74});
+                            this.stop().animate("still", 1, -1);
                         }
                     })
                     // A rudimentary way to prevent the user from passing solid areas
@@ -188,8 +191,9 @@
                 exitDoor: [0, 0, 48, 48]
             });
 
-	    Crafty.sprite("./images/cleantest.png", {
-                man: [0, 0, 46, 62]
+	    Crafty.sprite("./images/resized_main_char.png", {
+                still: [218, 1, 32, 74],
+		walk_right: [222, 76, 45, 74]
             });
 
             /* Entities declarations */
@@ -216,7 +220,7 @@
             //    .attr({ x: 100, y: 100, z: 1 })
             //    .multiway(3, { UP_ARROW: -90, DOWN_ARROW: 90, RIGHT_ARROW: 0, LEFT_ARROW: 180 });
 
-            var player1 = Crafty.e("2D, DOM, Ape, Multiway, man, Gravity, Teleport, LevelUp")
+            var player1 = Crafty.e("2D, DOM, Ape, Multiway, still, Gravity, Teleport, LevelUp")
             .attr({ x: 200, y: 80, z: 1 })
             .Ape()
             .multiway(charSpeed, { SPACE: -90, RIGHT_ARROW: 0, LEFT_ARROW: 180 })
