--- a/static/index.html
+++ b/static/index.html
@@ -12,9 +12,8 @@
         <title>Collaborative 2D Portal Game</title>
     </head>
     <body>
-		<audio autoplay="false" loop="true" controls>
-			<!source src="musics/portal_main_theme.wav" type="audio/wav">
-			<!source src="musics/Portal 2 Want You Gone.wav" type="audio/wav">
+		<audio controls>
+			<source src="musics/portal_main_theme.wav" type="audio/wav">
 		</audio>
 	
 		<div style="display:table;width:100%;height:400px;text-align:center;">
