nice new background

--- a/static/game.html
+++ b/static/game.html
@@ -21,7 +21,7 @@
         </style>
     </head>
     
-    <body>
+    <body style="background: #222222 url(../images/bg-checker.png);">
         <script type="text/javascript">
             function QueryString() {
                 var query_string = new Array();
